force-app/main/default/objects/Caregiver_Transactions__c/Caregiver_Transactions__c.object-meta.xml
<CustomObject>
    <label>Caregiver Transaction</label>
    <nameField>
        <label>Caregiver Transactions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Caregiver Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>