force-app/main/default/objects/Caregiver_Transactions__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Caregiver Transactions</relationshipLabel>
    <relationshipName>Caregiver_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>