force-app/main/default/objects/Caregiver_Transactions__c/fields/Caregiver__c.field-meta.xml
<CustomField>
    <fullName>Caregiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caregiver</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Caregiver Transactions (Caregiver)</relationshipLabel>
    <relationshipName>Caregiver_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>