force-app/main/default/objects/Caregiver_Transactions__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Caregiver Transactions</relationshipLabel>
    <relationshipName>Caregiver_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>