force-app/main/default/objects/Caregiver_Transactions__c/fields/Trust__c.field-meta.xml
<CustomField>
    <fullName>Trust__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trust</label>
    <referenceTo>Trust__c</referenceTo>
    <relationshipLabel>Caregiver Transactions</relationshipLabel>
    <relationshipName>Caregiver_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>